--- a/docker/travel_portal/Dockerfile
+++ b/docker/travel_portal/Dockerfile
@@ -2,11 +2,11 @@ FROM centos:centos7
 
 LABEL maintainer="ponce.ballesteros@gmail.com"
 
-ENV TRAVEL_HOME=/opt/travels \
+ENV TRAVEL_HOME=/opt/travel_portal \
     PATH=$TRAVEL_HOME:$PATH
     
 WORKDIR $TRAVEL_HOME
 
-COPY travels $TRAVEL_HOME/
+COPY travel_portal $TRAVEL_HOME/
 
-ENTRYPOINT ["/opt/travels/travels"]
+ENTRYPOINT ["/opt/travel_portal/travel_portal"]
