--- a/travel_agency.yaml
+++ b/travel_agency.yaml
@@ -58,7 +58,7 @@ spec:
     spec:
       containers:
         - name: mysqldb
-          image: lucasponce/mysql:v2
+          image: lucasponce/mysqldb:v2
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3306
@@ -75,4 +75,364 @@ spec:
       volumes:
         - name: var-lib-mysql
           emptyDir:
+---
+##################################################################################################
+# Cars services
+##################################################################################################
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: cars-v1
+spec:
+  selector:
+    matchLabels:
+      app: cars
+      version: v1
+  replicas: 1
+  template:
+    metadata:
+      annotations:
+        readiness.status.sidecar.istio.io/applicationPorts: ""
+      labels:
+        app: cars
+        version: v1
+    spec:
+      containers:
+        - name: cars
+          image: lucasponce/cars:v2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          securityContext:
+            privileged: false
+          env:
+            - name: CURRENT_SERVICE
+              value: "cars"
+            - name: CURRENT_VERSION
+              value: "v1"
+            - name: LISTEN_ADDRESS
+              value: ":8000"
+            - name: DISCOUNTS_SERVICE
+              value: "http://discounts.travel-agency:8000"
+            - name: MYSQL_SERVICE
+              value: "mysqldb.travel-agency:3306"
+            - name: MYSQL_USER
+              value: "root"
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: rootpasswd
+            - name: MYSQL_DATABASE
+              value: "test"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cars
+  labels:
+    app: cars
+spec:
+  ports:
+    - name: http
+      port: 8000
+  selector:
+    app: cars
+---
+##################################################################################################
+# Discounts services
+##################################################################################################
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: discounts-v1
+spec:
+  selector:
+    matchLabels:
+      app: discounts
+      version: v1
+  replicas: 1
+  template:
+    metadata:
+      annotations:
+        readiness.status.sidecar.istio.io/applicationPorts: ""
+      labels:
+        app: discounts
+        version: v1
+    spec:
+      containers:
+        - name: discounts
+          image: lucasponce/discounts:v2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          securityContext:
+            privileged: false
+          env:
+            - name: CURRENT_SERVICE
+              value: "discounts"
+            - name: CURRENT_VERSION
+              value: "v1"
+            - name: LISTEN_ADDRESS
+              value: ":8000"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: discounts
+  labels:
+    app: discounts
+spec:
+  ports:
+    - name: http
+      port: 8000
+  selector:
+    app: discounts
+---
+##################################################################################################
+# Flights services
+##################################################################################################
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: flights-v1
+spec:
+  selector:
+    matchLabels:
+      app: flights
+      version: v1
+  replicas: 1
+  template:
+    metadata:
+      annotations:
+        readiness.status.sidecar.istio.io/applicationPorts: ""
+      labels:
+        app: flights
+        version: v1
+    spec:
+      containers:
+        - name: flights
+          image: lucasponce/flights:v2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          securityContext:
+            privileged: false
+          env:
+            - name: CURRENT_SERVICE
+              value: "flights"
+            - name: CURRENT_VERSION
+              value: "v1"
+            - name: LISTEN_ADDRESS
+              value: ":8000"
+            - name: DISCOUNTS_SERVICE
+              value: "http://discounts.travel-agency:8000"
+            - name: MYSQL_SERVICE
+              value: "mysqldb.travel-agency:3306"
+            - name: MYSQL_USER
+              value: "root"
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: rootpasswd
+            - name: MYSQL_DATABASE
+              value: "test"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: flights
+  labels:
+    app: flights
+spec:
+  ports:
+    - name: http
+      port: 8000
+  selector:
+    app: flights
+---
+##################################################################################################
+# Hotels services
+##################################################################################################
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: hotels-v1
+spec:
+  selector:
+    matchLabels:
+      app: hotels
+      version: v1
+  replicas: 1
+  template:
+    metadata:
+      annotations:
+        readiness.status.sidecar.istio.io/applicationPorts: ""
+      labels:
+        app: hotels
+        version: v1
+    spec:
+      containers:
+        - name: hotels
+          image: lucasponce/hotels:v2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          securityContext:
+            privileged: false
+          env:
+            - name: CURRENT_SERVICE
+              value: "hotels"
+            - name: CURRENT_VERSION
+              value: "v1"
+            - name: LISTEN_ADDRESS
+              value: ":8000"
+            - name: DISCOUNTS_SERVICE
+              value: "http://discounts.travel-agency:8000"
+            - name: MYSQL_SERVICE
+              value: "mysqldb.travel-agency:3306"
+            - name: MYSQL_USER
+              value: "root"
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: rootpasswd
+            - name: MYSQL_DATABASE
+              value: "test"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: hotels
+  labels:
+    app: hotels
+spec:
+  ports:
+    - name: http
+      port: 8000
+  selector:
+    app: hotels
+---
+##################################################################################################
+# Insurances services
+##################################################################################################
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: insurances-v1
+spec:
+  selector:
+    matchLabels:
+      app: insurances
+      version: v1
+  replicas: 1
+  template:
+    metadata:
+      annotations:
+        readiness.status.sidecar.istio.io/applicationPorts: ""
+      labels:
+        app: insurances
+        version: v1
+    spec:
+      containers:
+        - name: insurances
+          image: lucasponce/insurances:v2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          securityContext:
+            privileged: false
+          env:
+            - name: CURRENT_SERVICE
+              value: "insurances"
+            - name: CURRENT_VERSION
+              value: "v1"
+            - name: LISTEN_ADDRESS
+              value: ":8000"
+            - name: DISCOUNTS_SERVICE
+              value: "http://discounts.travel-agency:8000"
+            - name: MYSQL_SERVICE
+              value: "mysqldb.travel-agency:3306"
+            - name: MYSQL_USER
+              value: "root"
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: rootpasswd
+            - name: MYSQL_DATABASE
+              value: "test"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: insurances
+  labels:
+    app: insurances
+spec:
+  ports:
+    - name: http
+      port: 8000
+  selector:
+    app: insurances
+---
+##################################################################################################
+# Travels services
+##################################################################################################
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: travels-v1
+spec:
+  selector:
+    matchLabels:
+      app: travels
+      version: v1
+  replicas: 1
+  template:
+    metadata:
+      annotations:
+        readiness.status.sidecar.istio.io/applicationPorts: ""
+      labels:
+        app: travels
+        version: v1
+    spec:
+      containers:
+        - name: travels
+          image: lucasponce/travels:v2
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          securityContext:
+            privileged: false
+          env:
+            - name: CURRENT_SERVICE
+              value: "travels"
+            - name: CURRENT_VERSION
+              value: "v1"
+            - name: LISTEN_ADDRESS
+              value: ":8000"
+            - name: FLIGHTS_SERVICE
+              value: "http://flights.travel-agency:8000"
+            - name: HOTELS_SERVICE
+              value: "http://hotels.travel-agency:8000"
+            - name: CARS_SERVICE
+              value: "http://cars.travel-agency:8000"
+            - name: INSURANCES_SERVICE
+              value: "http://insurances.travel-agency:8000"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: travels
+  labels:
+    app: travels
+spec:
+  ports:
+    - name: http
+      port: 8000
+  selector:
+    app: travels
 ---
